# rust-study

./: .gitignore  Cargo.toml
actix-web/actix-web-graphql/: Cargo.toml
actix-web/actix-web-graphql/src/: main.rs  service.rs
actix-web/actix-web-graphql/src/service/: hello.rs  hello_there.rs
actix-web/actix-web-json-request/: Cargo.toml
actix-web/actix-web-json-request/src/: main.rs
actix-web/tokio-integration/: Cargo.toml
actix-web/tokio-integration/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
async-zookeeper-exam/: Cargo.toml
async-zookeeper-exam/src/: main.rs
axum-study/: Cargo.toml  README.md  host1.crt  host1.key  host2.crt  host2.key
axum-study/src/: main.rs
cargo-script/: script.crs
fiber/: Cargo.toml  test.sc
fiber/src/: main.rs
file-io/: Cargo.toml
file-io/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml  Dockerfile
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
multi-ssh/: Cargo.toml
multi-ssh/src/: main.rs
real-estate-bot/: Cargo.toml
real-estate-bot/src/: estate.rs  main.rs
reqwest-json/: Cargo.toml
reqwest-json/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs  main.rs
restaurant/src/front_of_house/: hosting.rs
seaorm-study/: Cargo.toml
seaorm-study/src/: main.rs
simulated_expensive_calculation/: Cargo.toml
simulated_expensive_calculation/src/: main.rs
strategy_pattern_exam/: Cargo.toml
strategy_pattern_exam/src/: main.rs
tco-exam/: Cargo.toml
tco-exam/src/: main.rs
telegram/telegram-bot/: Cargo.toml
telegram/telegram-bot/src/: main.rs
upbit-bot/: Cargo.toml  log.txt
upbit-bot/src/: app.rs  buy.rs  domain.rs  main.rs  noti.rs  sell.rs  simulation.rs  ui.rs  upbit.rs  upbit_service.rs  util.rs
upbit-bot/src/upbit/: mod.rs  model.rs
zookeeper-exam/: Cargo.toml
zookeeper-exam/src/: main.rs
