[package]
name = "rust-study"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

[[bin]]
name = "chapter02"
target = "src/chapter02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
