[package]
name = "axum-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = '*'
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
chrono = "0.4" # datetime
lazy_static = "1.4.0" # static heap
uuid = { version = "0.8", features = ["serde", "v4"] }
format_num = "0.1"
async-lock = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
sum_type = "0.2"
axum = { version = "0.5" }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tower-cookies = "0.6"
cookie = "0.16"
rustls = "0.20"
clap = { version = "3.1", features = ["derive"] }


[[bin]]
path = "src/main.rs"
name = "axum_study"

