[package]
name = "fiber"
version = "0.1.0"
authors = ["ipoemi <ipoemi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tco = "*"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
