[package]
name = "fiber"
version = "0.1.0"
authors = ["ipoemi <ipoemi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tco = "*"
futures = "0.3"
itertools = "*"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
