[package]
name = "multi-ssh"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
