[package]
name = "multi-ssh"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tco = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
openssh = "0.8.0"
tokio = { version = "1", features = ["full"] }
