[package]
name = "reqwest-json"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json = "1.0"
reqwest = { version="0.10", features=["json"] }
tokio = { version="0.2", features=["full"]}
