[package]
name = "seaorm-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = '*'
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
chrono = "0.4" # datetime
lazy_static = "1.4.0" # static heap
uuid = { version = "1", features = ["serde", "v4"] }
format_num = "0.1"
async-lock = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
sum_type = "0.2"
sea-orm = { version = "0.7", features = [ "runtime-async-std-rustls", "sqlx-mysql", "macros" ], default-features = false }

[[bin]]
path = "src/main.rs"
name = "seaorm_study"

