[package]
name = "strategy_pattern_exam"
version = "0.1.0"
authors = ["ben.jung <ben.jung@kakaocommerce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
async-trait = "*"
anyhow = "*"