[package]
name = "upbit-bot"
version = "0.1.0"
authors = ["ben.jung <ben.jung@kakaocommerce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = '0.10'
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] } # http request call
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
rust_decimal = { version = "1.13", features = ["serde-float"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
chrono = "0.4" # datetime
static_init = "1" # static heap
governor = "0.3" # limiter
crossterm = "0.20" # terminal ui
tui = { version = "0.16", default-features = false, features = ['crossterm'] } # terminal ui
hmac = "0.11"
jwt = "0.14"
sha2 = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
format_num = "0.1"
async-lock = "2"
tokio-tungstenite = "*" # web socket
tracing = "0.1"
tracing-subscriber = "0.2"
