[package]
name = "actix-web-graphql"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.1"
async-graphql-actix-web = "2.1"
futures = "0.3"
actix-web = "3"
actix-rt = "1"
tokio = { version = "0.2", features = ["full"] }
tco = "*"
derive_more = "0.99"
typed-builder = "0.8"
log = "0.4"
env_logger = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hello"
harness = false
