[package]
name = "my-telegram-bot"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tco = "*"
telegram-bot = "0.7.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
